[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player_KinematicBody2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/chao_StaticBody2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/inimigo_Area2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Obstáculos/GrupoDInimigos_Area2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Jogo.gd" type="Script" id=8]
[ext_resource path="res://scenes/Obstáculos/GrupoDinossauros.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sound_music/02-BossBattle.mp3" type="AudioStream" id=10]

[node name="Jogo" type="Node"]
script = ExtResource( 8 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Player_KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 141, 220 )

[node name="chao_StaticBody2D" parent="." instance=ExtResource( 3 )]

[node name="Spawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 534, 215 )
scenes = [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ) ]

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="Dificuldade_1" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Dificuldade_2" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Dificuldade_3" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="Dificuldade_1" to="." method="_on_Dificuldade_timeout"]
[connection signal="timeout" from="Dificuldade_2" to="." method="_on_Dificuldade_2_timeout"]
[connection signal="timeout" from="Dificuldade_2" to="." method="_on_Dificuldade_timeout"]
[connection signal="timeout" from="Dificuldade_3" to="." method="_on_Dificuldade_3_timeout"]
[connection signal="timeout" from="Dificuldade_3" to="." method="_on_Dificuldade_2_timeout"]
[connection signal="timeout" from="Dificuldade_3" to="." method="_on_Dificuldade_timeout"]
